@@ -1,6 +1,11 @@
 
-	* Added more clients to the identifiable list
-	* Fixed fingerprint parser to cope with latest Mainline versions
+	* session::listen_on() won't reopen the socket in case the port and
+	  interface is the same as is already open.
+	* Added http proxy support for web seeds.
+	* Fixed problem where upload and download stats could become incorrect
+	  in case of high cpu load.
+	* Added more clients to the identifiable list.
+	* Fixed fingerprint parser to cope with latest Mainline versions.
 
 release 0.10
 
